# SnLogger

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
logger/: CMakeLists.txt
logger/include/snlogger/: async_logger.h  defines.h  formatter.h  log_level.h  sink.h  snlogger.h  static_logger.h
logger/src/: CMakeLists.txt  async_logger.c  formatter.c  snlogger.c  static_logger.c  test.c
test/: CMakeLists.txt  example_formatting.c  formatting.c  test.c  test1.c  test2.c
